@@ -27,6 +27,62 @@
 (require 'lsp-mode)
 (require 'ht)
 
+(defcustom lsp-elixir-dialyzer-enable t
+  "Run ElixirLS's rapid Dialyzer when code is saved."
+  :type 'boolean
+  :group 'lsp-elixir
+  :package-version '(lsp-mode . "7.1"))
+
+(defcustom lsp-elixir-dialyzer-warn-options '()
+  "Dialyzer options to enable or disable warnings.
+
+See Dialyzer's documentation for options. Note that the \"race_conditions\" option is unsupported"
+  :type '(repeat string)
+  :group 'lsp-elixir
+  :package-version '(lsp-mode . "7.1"))
+
+(defcustom lsp-elixir-dialyzer-format "dialyxir_long"
+  "Formatter to use for Dialyzer warnings."
+  :type 'string
+  :group 'lsp-elixir
+  :package-version '(lsp-mode . "7.1"))
+
+(defcustom lsp-elixir-mix-env "test"
+  "Mix environment to use for compilation."
+  :type 'string
+  :group 'lsp-elixir
+  :package-version '(lsp-mode . "7.1"))
+
+(defcustom lsp-elixir-mix-target nil
+  "Mix target to use for compilation (requires Elixir >= 1.8)."
+  :type 'string
+  :group 'lsp-elixir
+  :package-version '(lsp-mode . "7.1"))
+
+(defcustom lsp-elixir-project-dir nil
+  "Subdirectory containing Mix project if not in the project root."
+  :type 'string
+  :group 'lsp-elixir
+  :package-version '(lsp-mode . "7.1"))
+
+(defcustom lsp-elixir-fetch-deps t
+  "Automatically fetch project dependencies when compiling."
+  :type 'boolean
+  :group 'lsp-elixir
+  :package-version '(lsp-mode . "7.1"))
+
+(defcustom lsp-elixir-suggest-specs t
+  "Suggest @spec annotations inline using Dialyzer's inferred success typings (Requires Dialyzer)."
+  :type 'boolean
+  :group 'lsp-elixir
+  :package-version '(lsp-mode . "7.1"))
+
+(defcustom lsp-elixir-signature-after-complete t
+  "Show signature help after confirming autocomplete."
+  :type 'boolean
+  :group 'lsp-elixir
+  :package-version '(lsp-mode . "7.1"))
+
 (defgroup lsp-elixir nil
   "LSP support for Elixir, using elixir-ls."
   :group 'lsp-mode
@@ -42,12 +98,26 @@ finding the executable with `exec-path'."
   :group 'lsp-elixir
   :type 'file)
 
+(lsp-register-custom-settings
+ '(("elixirLS.dialyzerEnabled" lsp-elixir-dialyzer-enable t)
+   ("elixirLS.dialyzerWarnOpts" lsp-elixir-dialyzer-warn-options)
+   ("elixirLS.dialyzerFormat" lsp-elixir-dialyzer-format)
+   ("elixirLS.mixEnv" lsp-elixir-mix-env)
+   ("elixirLS.mixTarget" lsp-elixir-mix-target)
+   ("elixirLS.projectDir" lsp-elixir-project-dir)
+   ("elixirLS.fetchDeps" lsp-elixir-fetch-deps t)
+   ("elixirLS.suggestSpecs" lsp-elixir-suggest-specs t)
+   ("elixirLS.signatureAfterComplete" lsp-elixir-signature-after-complete t)))
+
 (lsp-register-client
  (make-lsp-client :new-connection (lsp-stdio-connection (lambda () `(,lsp-clients-elixir-server-executable)))
                   :major-modes '(elixir-mode)
                   :priority -1
                   :server-id 'elixir-ls
                   :initialized-fn (lambda (workspace)
+                                    (with-lsp-workspace workspace
+                                      (lsp--set-configuration
+                                       (lsp-configuration-section "elixirLS")))
                                     (puthash
                                      "textDocumentSync"
                                      (ht ("save" t)
